# hukuwarai-server

./: .envrc.example  .gitattributes  .gitignore  Cargo.nix  Cargo.toml  README.md  docker-compose.dev.yml  flake.nix  index.html  openapi.yaml
.github/workflows/: ci.yml  deploy.yml  generate-documents.yml  generate-openapi.yml
hukuwarai/: Cargo.toml
hukuwarai/migrations/: 20240720082154_game.up.sql  20240720130705_player.down.sql  20240720130705_player.up.sql  20240720130710_vote.down.sql  20240720130710_vote.up.sql  20240720130735_player.up.sql  20240720131623_score.down.sql  20240720131623_score.up.sql
hukuwarai/src/: handlers.rs  main.rs  model.rs
hukuwarai/src/handlers/: api_impl.rs  game.rs  games.rs  players.rs  scores.rs  votes.rs
hukuwarai/src/model/: game.rs  player.rs  score.rs  vote.rs
migrations/: 20240720033815_init.up.sql
openapi_gen/: Cargo.toml  README.md
openapi_gen/.openapi-generator/: FILES
openapi_gen/src/: models.rs
openapi_gen/src/apis/: game.rs  games.rs  mod.rs  players.rs  scores.rs  votes.rs
openapi_gen/src/server/: mod.rs
schema/: api.yml
src/: main.rs
src/handlers/: ping.rs  users.rs
