[package]
name = "hukuwarai"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15.7"
anyhow = "1.0.86"
openapi = { path = "../openapi_gen" }
axum-extra = "0.9.3"
tower-http = { version = "0.5.2", features = ["cors"] }
chrono = "0.4.38"
reqwest = { version = "0.12", features = ["json"]}
